--- a/package.json
+++ b/package.json
@@ -14,13 +14,28 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@mui/x-data-grid": "^5.17.18",
+    "@mui/x-date-pickers": "^5.0.14",
+    "@reduxjs/toolkit": "^1.8.5",
+    "apexcharts": "^3.41.1",
+    "axios": "^0.27.2",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-colorschemes": "^0.4.0",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "react-toastify": "^9.0.8",
+    "react-use-websocket": "3.0.0",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
